Fixing Issue AXIS2C-854. Applied patch diff2.txt